results/SVCOMP/conversational/log-StringStartEnd03-2024_03_17_09_54_55.txt
import org.sosy_lab.sv_benchmarks.Verifier;

public class Main {
    //@ requires \nonnullelements(args);
    public static void main(String[] args) {
        String[] strings = new String[4];
        strings[0] = Verifier.nondetString();
        strings[1] = Verifier.nondetString();
        strings[2] = Verifier.nondetString();
        strings[3] = Verifier.nondetString();

        int i = 0;
        //@ maintaining 0 <= i && i <= 4;
        //@ maintaining (\forall int j; 0 <= j && j < i; strings[j].endsWith("ed"));
        //@ decreases 4 - i;
        for (String string : strings) {
            if (string.endsWith("ed")) ++i;
        }
        assert i == 3;
    }
}
/home/max/Documents/JMLGPT/tmp/StringStartEnd03.java:3: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
/home/max/Documents/JMLGPT/tmp/StringStartEnd03.java:1: error: package org.sosy_lab.sv_benchmarks does not exist
import org.sosy_lab.sv_benchmarks.Verifier;
                                 ^
/home/max/Documents/JMLGPT/tmp/StringStartEnd03.java:7: error: cannot find symbol
        strings[0] = Verifier.nondetString();
                     ^
  symbol:   variable Verifier
  location: class Main
/home/max/Documents/JMLGPT/tmp/StringStartEnd03.java:8: error: cannot find symbol
        strings[1] = Verifier.nondetString();
                     ^
  symbol:   variable Verifier
  location: class Main
/home/max/Documents/JMLGPT/tmp/StringStartEnd03.java:9: error: cannot find symbol
        strings[2] = Verifier.nondetString();
                     ^
  symbol:   variable Verifier
  location: class Main
/home/max/Documents/JMLGPT/tmp/StringStartEnd03.java:10: error: cannot find symbol
        strings[3] = Verifier.nondetString();
                     ^
  symbol:   variable Verifier
  location: class Main
6 errors

// Unable to generate JML specifications for the given Java program due to external dependencies and compilation errors.

